--- a/static/style.css
+++ b/static/style.css
@@ -29,8 +29,8 @@ body {
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(4, 100px);
-    grid-gap: 10px;
+    grid-template-columns: repeat(4, 75px);
+    grid-gap: 5px;
     margin-bottom: 20px;
     padding: 10px;
     background: #bbada0;
@@ -38,17 +38,32 @@ body {
 }
 
 .grid-cell {
-    width: 100px;
-    height: 100px;
-    background-color: #cdc1b4;
-    font-size: 2rem;
-    font-weight: bold;
+    width: 75px;
+    height: 75px;
+    font-size: 1.5rem;
+    border-radius: 8px;
+}
+
+/* Стили для кнопок управления */
+.controls {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    border-radius: 10px;
-    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
-    transition: transform 0.1s ease-in-out;
+    gap: 5px;
+}
+
+.controls button {
+    font-size: 1.5rem;
+    padding: 10px;
+    background: #8f7a66;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.controls button:hover {
+    background: #6d5c48;
 }
 
 .grid-cell[data-value] {
